--- a/src/views/leases/list.ejs
+++ b/src/views/leases/list.ejs
@@ -9,7 +9,10 @@
     <main>
         <%- include('../partials/sidebar') %>
         <section class="content">
-            <h2>Lease Agreements <a href="/leases/new" class="btn">Add New</a></h2>
+            <h2>Lease Agreements <a href="/leases/new" class="btn btn-primary">
+    <i data-lucide="file-plus"></i>
+    <span>Create Lease</span>
+</a></h2>
             <table>
                 <thead>
                     <tr>
