--- a/src/views/tenants/list.ejs
+++ b/src/views/tenants/list.ejs
@@ -9,7 +9,10 @@
     <main>
         <%- include('../partials/sidebar') %>
         <section class="content">
-            <h2>Tenants <a href="/tenants/new" class="btn">Add New</a></h2>
+            <h2>Tenants <a href="/tenants/new" class="btn btn-primary">
+    <i data-lucide="user-plus"></i>
+    <span>Add New Tenant</span>
+</a></h2>
             <table>
                 <thead>
                     <tr>
