--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -92,7 +92,7 @@ nav a:hover {
 /* Professional Layout */
 main {
     display: flex;
-    max-width: 1400px;
+    /* max-width: 1400px; */
     margin: 0 auto;
     min-height: calc(100vh - 73px);
 }
