fix: home page added

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -301,6 +301,9 @@ button[type="submit"] {
     background-color: var(--primary);
     color: var(--white);
     border-color: var(--primary);
+    padding: 6px 2px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .btn-primary:hover,
