--- a/src/views/leases/view.ejs
+++ b/src/views/leases/view.ejs
@@ -44,8 +44,8 @@
                 <p>No payments recorded for this lease.</p>
             <% } %>
             
-            <a href="/leases/<%= lease.id %>/edit" class="btn">Edit Lease</a>
-            <a href="/leases" class="btn">Back to Leases</a>
+            <a href="/agent/leases/<%= lease.id %>/edit" class="btn">Edit Lease</a>
+            <a href="/agent/leases" class="btn">Back to Leases</a>
         </section>
     </main>
     <%- include('../partials/footer') %>
