--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,14 +2,14 @@
     <nav>
         <div class="nav-brand">
             <i data-lucide="home"></i>
-            <span>TenantPro</span>
+            <span>PgDhundho</span>
         </div>
         <div class="nav-links">
-            <a href="/profile" class="nav-link">
+            <a href="/agent/profile" class="nav-link">
                 <i data-lucide="user"></i>
                 <span>Profile</span>
             </a>
-            <a href="/settings" class="nav-link">
+            <a href="/agent/settings" class="nav-link">
                 <i data-lucide="settings"></i>
                 <span>Settings</span>
             </a>
