--- a/src/views/tenants/list.ejs
+++ b/src/views/tenants/list.ejs
@@ -29,9 +29,9 @@
                             <td><%= tenant.email %></td>
                             <td><%= tenant.phone %></td>
                             <td>
-                                <a href="/tenants/<%= tenant.id %>">View</a>
-                                <a href="/tenants/<%= tenant.id %>/edit">Edit</a>
-                                <form action="/tenants/<%= tenant.id %>/delete" method="post" style="display:inline;">
+                                <a href="/agent/tenants/<%= tenant.id %>">View</a>
+                                <a href="/agent/tenants/<%= tenant.id %>/edit">Edit</a>
+                                <form action="/agent/tenants/<%= tenant.id %>/delete" method="post" style="display:inline;">
                                     <button type="submit" class="btn-delete">Delete</button>
                                 </form>
                             </td>
