--- a/src/views/tenants/view.ejs
+++ b/src/views/tenants/view.ejs
@@ -47,8 +47,8 @@
                 <p>No leases found for this tenant.</p>
             <% } %>
             
-            <a href="/tenants/<%= tenant.id %>/edit" class="btn">Edit Tenant</a>
-            <a href="/tenants" class="btn">Back to Tenants</a>
+            <a href="/agent/tenants/<%= tenant.id %>/edit" class="btn">Edit Tenant</a>
+            <a href="/agent/tenants" class="btn">Back to Tenants</a>
         </section>
     </main>
     <%- include('../partials/footer') %>
