--- a/src/views/tenants/form.ejs
+++ b/src/views/tenants/form.ejs
@@ -10,7 +10,7 @@
         <%- include('../partials/sidebar') %>
         <section class="content">
             <h2><%= title %></h2>
-            <form action="/tenants/<%= tenant ? tenant.id + '/edit' : '' %>" method="POST">
+            <form action="/agent/tenants/<%= tenant ? tenant.id + '/edit' : '' %>" method="POST">
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
                     <input type="text" name="firstName" id="firstName" value="<%= tenant ? tenant.firstName : '' %>" required>
