feat: reports added

--- a/src/views/tenants/list.ejs
+++ b/src/views/tenants/list.ejs
@@ -9,7 +9,7 @@
     <main>
         <%- include('../partials/sidebar') %>
         <section class="content">
-            <h2>Tenants <a href="/tenants/new" class="btn btn-primary">
+            <h2>Tenants <a href="/agent/tenants/new" class="btn btn-primary">
     <i data-lucide="user-plus"></i>
     <span>Add New Tenant</span>
 </a></h2>
