--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,5 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PgDhundho</title>
 <link rel="stylesheet" href="/styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+<link href="/font.css" rel="stylesheet">
+<script src="/lucid.js"></script>
