--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <div class="nav-brand">
+        <div class="nav-brand cursor-pointer" onclick="gotoHome()">
             <i data-lucide="home"></i>
             <span>PgDhundho</span>
         </div>
