--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -23,6 +23,10 @@
         <i data-lucide="wrench"></i>
         <span>Maintenance</span>
     </a>
+    <a href="/agent/contacts" class="sidebar-link">
+        <i data-lucide="message-circle"></i>
+        <span>Contacts</span>
+    </a>
     <a href="/agent/reports" class="sidebar-link">
         <i data-lucide="bar-chart-3"></i>
         <span>Reports</span>
