--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -13,7 +13,7 @@
         <% if (typeof error !== 'undefined' && error) { %>
             <div class="error-message"><%= error %></div>
         <% } %>
-        <form action="/login" method="POST">
+        <form action="/login?<%= redirect ? 'redirect=' + encodeURIComponent(redirect) : '' %>" method="POST">
             <div class="form-group">
                 <label for="email">
                     <i data-lucide="mail"></i>
