--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -5,4 +5,7 @@
 document.addEventListener('DOMContentLoaded', function() {
     lucide.createIcons();
 });
+function gotoHome(){
+    window.location.href = '/'
+}
 </script>
